--- a/FinancialMath/.editorconfig
+++ b/FinancialMath/.editorconfig
@@ -129,14 +129,14 @@ csharp_style_var_for_built_in_types = false:warning
 csharp_style_var_when_type_is_apparent = false:warning
 csharp_style_var_elsewhere = false:warning
 # Expression-bodied members
-csharp_style_expression_bodied_methods = true:warning
+csharp_style_expression_bodied_methods = false:warning
 csharp_style_expression_bodied_constructors = true:warning
 csharp_style_expression_bodied_operators = true:warning
 csharp_style_expression_bodied_properties = true:warning
 csharp_style_expression_bodied_indexers = true:warning
 csharp_style_expression_bodied_accessors = true:warning
 csharp_style_expression_bodied_lambdas = true:warning
-csharp_style_expression_bodied_local_functions = true:warning
+csharp_style_expression_bodied_local_functions = false:warning
 # Pattern matching preferences
 csharp_style_pattern_matching_over_is_with_cast_check = true:warning
 csharp_style_pattern_matching_over_as_with_null_check = true:warning
@@ -145,7 +145,7 @@ csharp_style_prefer_pattern_matching = true:warning
 csharp_style_prefer_not_pattern = true:warning
 # Expression-level preferences
 csharp_style_inlined_variable_declaration = true:warning
-csharp_prefer_simple_default_expression = true:warning
+csharp_prefer_simple_default_expression = false:warning
 csharp_style_pattern_local_over_anonymous_function = true:warning
 csharp_style_deconstructed_variable_declaration = true:warning
 csharp_style_prefer_index_operator = true:warning
