--- a/FinancialMath/FinancialMath.csproj
+++ b/FinancialMath/FinancialMath.csproj
@@ -9,6 +9,26 @@
     <Title>Amortization Calculator</Title>
     <Description>Amortization Calculator - More coming soon</Description>
     <PackageProjectUrl>https://github.com/thephpguy/FinancialMath</PackageProjectUrl>
+    <SignAssembly>False</SignAssembly>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <Authors>$(AssemblyName), Timothy Martens</Authors>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <RepositoryUrl>https://github.com/thephpguy/FinancialMath</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageTags>Finance, Math, Interest, Amortization, calculator</PackageTags>
+    <PackageReleaseNotes>Initial Release</PackageReleaseNotes>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Update="LICENSE">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+    <None Update="README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
 </Project>
