--- a/FinancialMath/FinancialMath.csproj
+++ b/FinancialMath/FinancialMath.csproj
@@ -1,13 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <VersionPrefix>1.0.0</VersionPrefix>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <IsPackable>true</IsPackable>
     <OutputType>Library</OutputType>
     <Title>Amortization Calculator</Title>
-    <Description>Amortization Calculator - More coming soon</Description>
+    <Description>A comprehensive set of methods for solving Finance and Accounting equations, including specialized functions for amortization schedules and compound interest calculations.</Description>
     <PackageProjectUrl>https://github.com/thephpguy/FinancialMath</PackageProjectUrl>
     <SignAssembly>False</SignAssembly>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
@@ -15,7 +16,7 @@
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <RepositoryUrl>https://github.com/thephpguy/FinancialMath</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
-    <PackageTags>Finance, Math, Interest, Amortization, calculator</PackageTags>
+    <PackageTags>finance, math, interest, amortization, financial, formulas, equations, calculations, finance, accounting, economics, investing, mathematics, business, entrepreneur, banking</PackageTags>
     <PackageReleaseNotes>Initial Release</PackageReleaseNotes>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
   </PropertyGroup>
